# 20-kaggle-competitions

./: README.md  pyproject.toml
1. Regression with a Mohs Hardness Dataset/: Regression with a Mohs Hardness Dataset.ipynb  app.py
10. Predict Calorie Expenditure/: app.py
12. Manufacturing Control Data/: Manufacturing Control Data.ipynb
13. Bike Sharing Demand/: Bike Sharing Demand.ipynb  app.py
14. Breast Cancer Classification/: Breast Cancer Classification.ipynb  app.py
15. Predicting Car Prices from Text Descriptions/: Predicting Car Prices from Text Descriptions.ipynb  app.py
2. Predicting Road Accident Risk/: Predicting Road Accident Risk.ipynb  app.py
3. Predicting the Beats-per-Minute of Songs/: Predicting the Beats-per-Minute of Songs.ipynb  app.py
4. Regression with a Crab Age Dataset/: Crab Age Prediction.ipynb  app.py
5. Binary Classification of Machine Failures/: Machine Failures Prediction.ipynb  app.py
6. Forest Cover Type Prediction/: app.py
7. Steel Plate Defect Prediction/: Steel Plate Defect Prediction.ipynb
8. Predict the Introverts from the Extroverts/: Predict the Introverts from the Extroverts.ipynb  app.py
9. Binary Classification with a Bank Dataset/: Binary Classification with a Bank Dataset.ipynb  app.py
