[project]
name = "20-kaggle-competitions"
version = "0.1.0"
description = "A portfolio of end-to-end solutions for 20 Kaggle machine learning competitions, from EDA to deployed models."
authors = [
    {name = "Emre Tuncer",email = "emretuncer.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tensorflow[and-cuda] (>=2.20.0,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "miceforest (>=6.0.3,<7.0.0)",
    "yellowbrick (>=1.5,<2.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "neattext (>=0.1.3,<0.2.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
